--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,12 @@
       <version>8.0.21</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.26</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>mybatis-demo</finalName>
